# reelrank-recommender

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
apps/: CMakeLists.txt  benchmark_recommender.cpp  benchmark_retrieval.cpp  inspect_user.cpp  simulate.cpp  train_models.cpp
cmake/: vendor_vector_db.cmake
configs/: large.json  medium.json  phase10-drift.json  realism-medium-sessions-engagement.json  realism-medium-sessions-proxy.json  realism-medium-sessions.json  small.json
docs/: LIMITATIONS.md  RESULTS.md  RESUME.md
docs/design/: P22-CONTRACTS.md  P23-CONTRACTS.md
include/rr/candidate_sources/: creator_affinity_candidate_source.hpp  exact_candidate_source.hpp  hnsw_candidate_source.hpp  popular_candidate_source.hpp  trending_candidate_source.hpp
include/rr/core/: embedding.hpp  pinned_hash.hpp
include/rr/domain/: behaviour_outcome.hpp  candidate.hpp  creator.hpp  hidden_user_state.hpp  ids.hpp  interaction.hpp  recommendation.hpp  reel.hpp  serialization.hpp  user.hpp
include/rr/evaluation/: cold_start.hpp  diversity_metrics.hpp  event_driven_runner.hpp  experiment_runner.hpp  results_writer.hpp  retrieval_evaluator.hpp  session_health_metrics.hpp  survey_writer.hpp
include/rr/infrastructure/: archetype_config.hpp  clock.hpp  config.hpp  logger.hpp  random.hpp
include/rr/learning/: online_user_state_updater.hpp  reward_model.hpp  user_state_updater.hpp
include/rr/learning_v2/: hnsw_learned_ranker_recommender.hpp  learned_ranker.hpp  linear_regression.hpp  logistic_regression.hpp  retrainer.hpp  sgd_common.hpp  training_data.hpp  training_log_schema.hpp  training_logger.hpp  training_matrix.hpp
include/rr/recommendation/: candidate_generator.hpp  constraint_reranker.hpp  diversity_reranker.hpp  effective_preference.hpp  exact_vector_recommender.hpp  feature_extractor.hpp  full_recommender.hpp  (+10 more)
scripts/: check_event_digest.py  check_golden.py  check_hidden_isolation.py  compare_results.py  demo.sh  phase16_comparison.py  phase22_report.py  phase23_comparison.py  phase23_gap_analysis.py  plot_results.py  pyproject.toml  run_experiments.py  run_phase16_experiment.sh  run_phase22_logworld.sh  run_phase23_experiment.sh
src/candidate_sources/: creator_affinity_candidate_source.cpp  exact_candidate_source.cpp  hnsw_candidate_source.cpp  popular_candidate_source.cpp  trending_candidate_source.cpp
src/core/: embedding.cpp  pinned_hash.cpp
src/domain/: serialization.cpp
src/evaluation/: diversity_metrics.cpp  event_driven_runner.cpp  experiment_runner.cpp  results_writer.cpp  retrieval_evaluator.cpp  session_health_metrics.cpp  survey_writer.cpp
src/infrastructure/: archetype_config.cpp  config.cpp  logger.cpp  random.cpp
src/learning/: online_user_state_updater.cpp  reward_model.cpp  tolerance_estimator.cpp
src/learning_v2/: hnsw_learned_ranker_recommender.cpp  learned_ranker.cpp  linear_regression.cpp  logistic_regression.cpp  retrainer.cpp  training_data.cpp  training_logger.cpp
src/recommendation/: constraint_reranker.cpp  diversity_reranker.cpp  exact_vector_recommender.cpp  feature_extractor.cpp  full_recommender.cpp  hnsw_ranker_recommender.cpp  hnsw_recommender.cpp  mmr_reranker.cpp  orchestrator.cpp  popularity_recommender.cpp  recommender_factory.cpp  scoring.cpp  weighted_ranker.cpp
src/simulation/: behaviour_model.cpp  behaviour_model_v2.cpp  cohort_hash.cpp  dataset_generator.cpp  drift_scheduler.cpp  event_queue.cpp  language.cpp  reel_augmenter_v2.cpp  simulator.cpp  user_augmenter_v2.cpp
src/vindex/: hnsw_vector_index.cpp
tests/: CMakeLists.txt
tests/differential/: vector_index_differential_test.cpp
tests/golden/event-digest/: README.md  config.json  digest.txt
tests/golden/v1-baseline/: README.md
tests/golden/v1-baseline/drift-medium/: config.json  diversity_metrics.csv  metadata.json  recommendation_metrics.csv  retrieval_metrics.csv  summary.json
tests/golden/v1-baseline/small/: config.json  diversity_metrics.csv  learning_curve.csv  metadata.json  recommendation_metrics.csv  regret_curve.csv  retrieval_metrics.csv  summary.json
tests/integration/: diversity_pipeline_test.cpp  drift_adaptation_test.cpp  event_runner_pipeline_test.cpp  experiment_runner_test.cpp  hnsw_pipeline_test.cpp  learned_ranker_pipeline_test.cpp  learning_convergence_test.cpp  ranker_pipeline_test.cpp  session_dynamics_pipeline_test.cpp  simulator_determinism_test.cpp  training_log_determinism_test.cpp  training_log_purity_test.cpp  v2_dataset_generation_test.cpp  vdb_link_test.cpp
tests/property/: adaptation_statistical_test.cpp  behaviour_statistical_test.cpp  diversity_property_test.cpp  drift_property_test.cpp  event_determinism_test.cpp  exploration_recovery_statistical_test.cpp  learned_beats_baseline_statistical_test.cpp  learning_property_test.cpp  pipeline_property_test.cpp  ranking_property_test.cpp  reel_augmenter_v2_property_test.cpp  session_dynamics_property_test.cpp  session_exit_statistical_test.cpp  user_generator_property_test.cpp  v2_stream_discipline_test.cpp
tests/unit/: archetype_config_test.cpp  behaviour_model_test.cpp  candidate_source_test.cpp  clock_test.cpp  config_test.cpp  constraint_reranker_test.cpp  creator_affinity_candidate_source_test.cpp  creator_generator_test.cpp  diversity_metrics_test.cpp  diversity_reranker_test.cpp  domain_test.cpp  drift_scheduler_test.cpp  embedding_test.cpp  event_driven_runner_test.cpp  event_queue_test.cpp  exact_vector_recommender_test.cpp  feature_extractor_test.cpp  hnsw_recommender_test.cpp  language_test.cpp  leak_audit_test.cpp  learned_ranker_test.cpp  learning_v2_test_fixture.hpp  linear_regression_test.cpp  logger_test.cpp  logistic_regression_test.cpp  mmr_reranker_test.cpp  online_user_state_updater_test.cpp  orchestrator_capture_test.cpp  orchestrator_test.cpp  popular_candidate_source_test.cpp  random_test.cpp  recommender_factory_test.cpp  reel_augmenter_v2_test.cpp  retrieval_evaluator_test.cpp  reward_model_test.cpp  scoring_test.cpp  session_dynamics_test.cpp  session_health_metrics_test.cpp  simulator_test.cpp  survey_writer_test.cpp  (+6 more)
(+288 files in other folders)
